# OnchainQuant

./: Cargo.toml
contracts/onchainquant/: Cargo.toml
contracts/onchainquant/io/src/: lib.rs
contracts/onchainquant/src/: contract.rs
contracts/onchainquant/tests/: fungible_token.info  fungible_token.opt.wasm  tests.rs
