[package]
name = "onchainquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
onchainquant-io.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
sp-core-hashing.workspace = true
hex.workspace = true
hex-literal.workspace = true
ft-io = {git="https://github.com/gear-foundation/dapps-fungible-token.git"}

[build-dependencies]
gear-wasm-builder.workspace = true
onchainquant-io.workspace = true

[dev-dependencies]
gtest.workspace = true

